deploy/kubernetes/manifests/header-dep.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: header
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: header
  template:
    metadata:
      labels:
        name: header
    spec:
      containers:
        - name: header
          image: "willismorse/microservices-demo-microfrontend-header:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
