deploy/kubernetes/manifests/hostapp-dep.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hostapp
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hostapp
  template:
    metadata:
      labels:
        name: hostapp
    spec:
      containers:
        - name: hostapp
          image: "willismorse/microservices-demo-microfrontend-hostapp:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
