deploy/kubernetes/manifests/products-dep.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: products
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: products
  template:
    metadata:
      labels:
        name: products
    spec:
      containers:
        - name: products
          image: "willismorse/microservices-demo-microfrontend-products:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
