deploy/kubernetes/manifests/header-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: header
  namespace: sock-shop
  labels:
    name: header
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: header
