deploy/kubernetes/manifests/hostapp-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hostapp
  labels:
    name: hostapp
    chart: hostapp-0.1.0
    heritage: Tiller
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: hostapp
