deploy/kubernetes/manifests/products-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: products
  namespace: sock-shop
  labels:
    name: products
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: products
