deploy/kubernetes/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microfrontend-ingress
  namespace: sock-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
#   backend:
#     serviceName: default-http-backend
#     servicePort: 8080
  rules:
  # - host: header.*
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: header
  #         servicePort: 8080                          
        
  - host:
    http:
      paths:
      - path: /products
        backend:
          serviceName: products
          servicePort: 8080
      - path: /hostapp
        backend:
          serviceName: hostapp
          servicePort: 8080    
      - path: /header
        backend:
          serviceName: header
          servicePort: 8080                          
      - path: /api/catalogue
        backend:
          serviceName: catalogue
          servicePort: 80
      - path: /
        backend:
          serviceName: hostapp
          servicePort: 8080
